--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -1,7 +1,10 @@
 .team {
-	padding-top: 166px;
-	padding-bottom: 100px;
+	padding-top: rem(166);
+	padding-bottom: rem(100);
 	background: url("../img/team/bg.png") center/cover no-repeat;
+	@media (max-width: em(768)) {
+		padding-bottom: rem(50);
+	}
 	&__body {
 		position: relative;
 	}
@@ -89,6 +92,7 @@
 		position: relative;
 		transition: 0.3s;
 		margin-bottom: 16px;
+		border-radius: 4px;
 		&:hover {
 			transition: 0.3s;
 			&:after {
