--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-	max-width: 78.75rem;
+	max-width: rem(1260);
 	//max-width: rem(1260); //! размер контейнера + padding
 	margin: 0 auto;
 	padding: 0 15px;
