added adaptive to footer

--- a/css/style.css
+++ b/css/style.css
@@ -2116,10 +2116,28 @@ body {
   display: flex;
   margin: 0 -2.5rem;
 }
+@media (max-width: 64em) {
+  .footer-content {
+    flex-wrap: wrap;
+  }
+}
 
 .footer-column {
   flex: 0 1 33.333%;
   padding: 0 2.5rem;
+}
+@media (max-width: 64em) {
+  .footer-column:last-child {
+    margin-top: 1.5625rem;
+    flex: 0 1 100%;
+  }
+}
+@media (max-width: 48em) {
+  .footer-column {
+    flex: 0 1 100%;
+    margin-top: 0;
+    margin-bottom: 1.5625rem;
+  }
 }
 
 .footer-top__logo {
@@ -2138,9 +2156,20 @@ body {
   opacity: 0.6;
   margin-bottom: 2.375rem;
 }
+@media (max-width: 48em) {
+  .footer-top__descr {
+    max-width: 100%;
+  }
+}
 .footer-top__social-list {
   display: flex;
   margin: 0 -1.03125rem;
+}
+@media (max-width: 48em) {
+  .footer-top__social-list {
+    max-width: 100%;
+    justify-content: center;
+  }
 }
 .footer-top__social-item {
   padding: 0 1.03125rem;
@@ -2155,6 +2184,12 @@ body {
   display: flex;
   margin: 0 -2.4375rem;
 }
+@media (max-width: 48em) {
+  .footer-middle {
+    flex-direction: column;
+    margin: 0;
+  }
+}
 .footer-middle__column {
   flex: 0 1 33.333%;
   padding: 0 2.4375rem;
@@ -2167,6 +2202,41 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 0.75rem;
+}
+@media (max-width: 48em) {
+  .footer-middle__title {
+    position: relative;
+    margin-bottom: 15px;
+  }
+  .footer-middle__title:before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: rotate(90deg);
+    transition: transform 0.3s;
+  }
+  .footer-middle__title:after {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: rotate(0deg);
+    transition: transform 0.3s;
+  }
+}
+@media (max-width: 48em) {
+  .footer-middle__list {
+    display: none;
+  }
 }
 .footer-middle__item {
   margin-bottom: 0.5rem;
@@ -2298,8 +2368,38 @@ body {
   line-height: 150%;
   opacity: 0.6;
   transition: opacity 0.3s;
+  width: 6.25rem;
 }
 .footer-copyrights__up-link:hover {
   transition: opacity 0.3s;
   opacity: 1;
+}
+
+.display-block {
+  display: block;
+}
+
+.footer-middle__title.active-spoiler:before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: rotate(45deg);
+  transition: transform 0.3s;
+}
+.footer-middle__title.active-spoiler:after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: rotate(-45deg);
+  transition: transform 0.3s;
 }
