--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,11 +7,26 @@
 	padding-top: rem(80);
 	padding-bottom: rem(60);
 	display: flex;
+
 	margin: 0 rem(-40);
+	@media (max-width: em(1024)) {
+		flex-wrap: wrap;
+	}
 }
 .footer-column {
 	flex: 0 1 33.333%;
 	padding: 0 rem(40);
+	@media (max-width: em(1024)) {
+		&:last-child {
+			margin-top: rem(25);
+			flex: 0 1 100%;
+		}
+	}
+	@media (max-width: em(768)) {
+		flex: 0 1 100%;
+		margin-top: 0;
+		margin-bottom: rem(25);
+	}
 }
 .footer-top {
 	&__logo {
@@ -30,11 +45,18 @@
 		color: #fff;
 		opacity: 0.6;
 		margin-bottom: rem(38);
+		@media (max-width: em(768)) {
+			max-width: 100%;
+		}
 	}
 
 	&__social-list {
 		display: flex;
 		margin: 0 rem(-16.5);
+		@media (max-width: em(768)) {
+			max-width: 100%;
+			justify-content: center;
+		}
 	}
 
 	&__social-item {
@@ -53,6 +75,10 @@
 .footer-middle {
 	display: flex;
 	margin: 0 rem(-39);
+	@media (max-width: em(768)) {
+		flex-direction: column;
+		margin: 0;
+	}
 	&__column {
 		flex: 0 1 33.333%;
 		padding: 0 rem(39);
@@ -66,9 +92,40 @@
 		text-transform: uppercase;
 		color: #ffffff;
 		margin-bottom: rem(12);
+		@media (max-width: em(768)) {
+			position: relative;
+			margin-bottom: 15px;
+			&:before {
+				content: "";
+				display: block;
+				width: 20px;
+				height: 2px;
+				background: #fff;
+				position: absolute;
+				right: 0;
+				top: 50%;
+				transform: rotate(90deg);
+				transition: transform 0.3s;
+			}
+			&:after {
+				content: "";
+				display: block;
+				width: 20px;
+				height: 2px;
+				background: #fff;
+				position: absolute;
+				right: 0;
+				top: 50%;
+				transform: rotate(0deg);
+				transition: transform 0.3s;
+			}
+		}
 	}
 
 	&__list {
+		@media (max-width: em(768)) {
+			display: none;
+		}
 	}
 
 	&__item {
@@ -209,6 +266,7 @@
 		line-height: 150%;
 		opacity: 0.6;
 		transition: opacity 0.3s;
+		width: rem(100);
 		&:hover {
 			transition: opacity 0.3s;
 			opacity: 1;
@@ -216,4 +274,33 @@
 	}
 }
 .heart-img {
+}
+.display-block {
+	display: block;
+}
+.footer-middle__title.active-spoiler {
+	&:before {
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		background: #fff;
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: rotate(45deg);
+		transition: transform 0.3s;
+	}
+	&:after {
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		background: #fff;
+		position: absolute;
+		right: 0;
+		top: 50%;
+		transform: rotate(-45deg);
+		transition: transform 0.3s;
+	}
 }
